--- a/package.json
+++ b/package.json
@@ -53,15 +53,15 @@
     "@types/jquery": "3.3.6",
     "@types/mocha": "5.2.5",
     "@types/sinon": "5.0.2",
-    "browser-sync": "^2.26.3",
+    "browser-sync": "^2.26.7",
     "browserify": "^16.2.3",
     "browserify-istanbul": "^3.0.1",
     "chai": "^4.1.2",
     "concurrently": "4.0.1",
     "cookie": "^0.3.1",
-    "hashcat": "0.3.1",
+    "hashcat": "^0.4.1",
     "inliner": "1.13.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "karma": "^3.0.0",
     "karma-browserify": "^5.1.1",
     "karma-browserstack-launcher": "^1.4.0",
@@ -71,7 +71,7 @@
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "less": "3.8.1",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "mocha": "^5.2.0",
     "preact": "8.3.1",
     "shx": "^0.3.2",
