--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "inline": "npm run inlineSvg ./tmp/dist-inlined/styles && cd tmp/dist-inlined && shx cat index.html |inliner >../dist-inlined.html",
     "inlineSvg": "node ./tools/inline-svg.js",
     "packInlined": "node ./tools/pack-inlined.js >tmp/sidebar-startpage-inlined.js",
-    "injectVersion": "node ./tools/inject-version.js"
+    "injectVersion": "node ./tools/inject-version.js",
+    "updateDependencies": "npx -p npm-check-updates ncu --doctor -u"
   },
   "author": "Acrolinx",
   "url": "http://www.acrolinx.com",
@@ -50,9 +51,9 @@
   },
   "devDependencies": {
     "@types/chai": "4.2.14",
-    "@types/jquery": "3.5.3",
-    "@types/lodash": "^4.14.162",
-    "@types/mocha": "8.0.3",
+    "@types/jquery": "3.5.4",
+    "@types/lodash": "^4.14.165",
+    "@types/mocha": "8.0.4",
     "@types/sinon": "9.0.8",
     "browser-sync": "^2.26.13",
     "browserify": "^17.0.0",
@@ -73,13 +74,13 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "less": "3.12.2",
     "lodash": "^4.17.20",
-    "mocha": "^8.2.0",
+    "mocha": "^8.2.1",
     "preact": "10.5.5",
-    "shx": "^0.3.2",
-    "sinon": "9.2.0",
+    "shx": "^0.3.3",
+    "sinon": "9.2.1",
     "tslib": "^2.0.3",
     "tslint": "6.1.3",
-    "typescript": "4.0.3",
+    "typescript": "4.0.5",
     "watch": "1.0.2",
     "watchify": "^3.11.1"
   },
