--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "watchifyTest": "watchify tmp/compiled/test/browser-tests/src/index.js -o tmp/browser-tests-index.js",
     "browserifyTest": "browserify tmp/compiled/test/browser-tests/src/index.js -o tmp/browser-tests-index.js",
     "browsersync": "browser-sync start --server --files \"app/**/*\" --files \"tmp/browser-tests-index.js\" --startPath app --cors",
-    "tslint": "tslint 'src/**/*.ts' 'test/**/*.ts'",
-    "tslintFix": "tslint --fix 'src/**/*.ts' 'test/**/*.ts'",
-    "buildDistButNotNPM": "shx rm -rf tmp/dist && shx mkdir -p app/scripts && npm run generateTranslationsTs && npm run tslint && tsc && npm run injectVersion && npm run test && npm run browserify && npm run less && shx mkdir -p tmp && shx cp -r app tmp/dist && hashcat tmp/dist/index.html && npm run buildOfflineDist && npm run buildInlined",
-    "buildDistWithNPMLinuxOnly": "shx rm -rf tmp/dist && shx mkdir -p app/scripts && npm run generateTranslationsTs && npm run tslint && tsc && npm run injectVersion && npm run test && npm run browserify && npm run less && shx mkdir -p tmp && shx cp -r app tmp/dist && hashcat tmp/dist/index.html && npm run buildOfflineDist && npm run buildInlined && npm run buildNpmDistLinuxOnly",
+    "lint": "eslint . --ext .ts",
+    "lintFix": "eslint . --ext .ts --fix",
+    "buildDistButNotNPM": "shx rm -rf tmp/dist && shx mkdir -p app/scripts && npm run generateTranslationsTs && npm run lint && tsc && npm run injectVersion && npm run test && npm run browserify && npm run less && shx mkdir -p tmp && shx cp -r app tmp/dist && hashcat tmp/dist/index.html && npm run buildOfflineDist && npm run buildInlined",
+    "buildDistWithNPMLinuxOnly": "shx rm -rf tmp/dist && shx mkdir -p app/scripts && npm run generateTranslationsTs && npm run lint && tsc && npm run injectVersion && npm run test && npm run browserify && npm run less && shx mkdir -p tmp && shx cp -r app tmp/dist && hashcat tmp/dist/index.html && npm run buildOfflineDist && npm run buildInlined && npm run buildNpmDistLinuxOnly",
     "buildNpmDistLinuxOnly": "shx mkdir -p dist && shx cp -R tmp/dist-offline/ dist && npm run createNpmDistFilesIndexLinuxOnly && npm run copyInlinedToNpmDist",
     "copyInlinedToNpmDist": "shx cp tmp/sidebar-startpage-inlined.js dist/index.js && shx cp tools/dist/index.d.ts dist/",
     "createNpmDistFilesIndexLinuxOnly": "cd dist/dist-offline && find . -type f | sed 's/^\\.//' |grep -v '^/files.txt' >files.txt",
@@ -55,12 +55,17 @@
     "@types/lodash": "^4.14.167",
     "@types/mocha": "^8.2.0",
     "@types/sinon": "^9.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
     "browser-sync": "^2.26.13",
     "browserify": "^17.0.0",
     "browserify-istanbul": "^3.0.1",
     "chai": "^4.2.0",
     "concurrently": "^5.3.0",
     "cookie": "^0.4.1",
+    "eslint": "^7.17.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-sonarjs": "^0.5.0",
     "hashcat": "^0.4.1",
     "inliner": "1.13.1",
     "jquery": "^3.5.1",
@@ -78,7 +83,6 @@
     "shx": "^0.3.3",
     "sinon": "9.2.3",
     "tslib": "^2.1.0",
-    "tslint": "6.1.3",
     "typescript": "4.1.3",
     "watch": "1.0.2",
     "watchify": "^3.11.1"
