--- a/package.json
+++ b/package.json
@@ -52,24 +52,24 @@
   "devDependencies": {
     "@types/chai": "4.2.14",
     "@types/jquery": "^3.5.5",
-    "@types/lodash": "^4.14.167",
+    "@types/lodash": "^4.14.168",
     "@types/mocha": "^8.2.0",
     "@types/sinon": "^9.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "browser-sync": "^2.26.13",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "browser-sync": "^2.26.14",
     "browserify": "^17.0.0",
     "browserify-istanbul": "^3.0.1",
     "chai": "^4.2.0",
     "concurrently": "^5.3.0",
     "cookie": "^0.4.1",
-    "eslint": "^7.17.0",
+    "eslint": "^7.18.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-sonarjs": "^0.5.0",
     "hashcat": "^0.4.1",
     "inliner": "1.13.1",
     "jquery": "^3.5.1",
-    "karma": "^6.0.0",
+    "karma": "^6.0.2",
     "karma-browserify": "^8.0.0",
     "karma-browserstack-launcher": "^1.6.0",
     "karma-chrome-launcher": "^3.1.0",
@@ -79,9 +79,9 @@
     "less": "^4.1.0",
     "lodash": "^4.17.20",
     "mocha": "^8.2.1",
-    "preact": "^10.5.10",
+    "preact": "^10.5.12",
     "shx": "^0.3.3",
-    "sinon": "9.2.3",
+    "sinon": "^9.2.4",
     "tslib": "^2.1.0",
     "typescript": "4.1.3",
     "watch": "1.0.2",
