--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
   - verify
   - build
   - test
+  - deploy
 
 # Cache node modules, npm install will take care of minor updates
 cache:
@@ -41,3 +42,33 @@ sonarcloud-check:
   only:
     - merge_requests
     - master
+
+npm-deploy:
+  image: node:latest
+  stage: deploy
+  before_script:
+    - node --version
+    - npm i
+    - npm run buildDistWithNPMLinuxOnly
+  script:
+    - |
+      if [[ $NPM_TOKEN ]]; then
+        npm publish --access public
+      fi
+  only:
+    - tags
+
+# maven-deploy:
+#   image: maven:3.6-jdk-11
+#   stage: deploy
+#   before_script:
+#     - mkdir -p tmp/s3/v14
+#     - cp -r tmp/dist tmp/s3/v14/dev
+#     - chmod +x ./gitlab-build-ci.sh
+#   script:
+#     - ./gitlab-build-ci.sh
+#   only:
+#     - tags
+
+
+
