--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,21 +72,24 @@ npm-deploy:
   variables:
     NPM_TOKEN: "${NPM_TOKEN}"
   script:
+    - npm set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
     - npm publish --access public
   only:
     - tags
 
-# maven-deploy:
-#   image: maven:3.6-jdk-11
-#   stage: deploy
-#   before_script:
-#     - mkdir -p tmp/s3/v14
-#     - cp -r tmp/dist tmp/s3/v14/dev
-#     - chmod +x ./gitlab-build-ci.sh
-#   script:
-#     - ./gitlab-build-ci.sh
-#   only:
-#     - tags
+maven-deploy:
+  image: maven:3.6-jdk-11
+  stage: deploy
+  before_script:
+    - mkdir -p tmp/s3/v14
+    - cp -r tmp/dist tmp/s3/v14/dev
+    - chmod +x ./gitlab-build-ci.sh
+  script:
+    - ./gitlab-build-ci.sh
+  only:
+    - master
+    - tags
+
 
 
 
